tests/bad_programs/syntax_errors/reserved_word_as_var2.notc
int main() {
    bool bool = true;
}
